--- a/templates/base.html
+++ b/templates/base.html
@@ -225,7 +225,7 @@
         <div class="container-fluid px-4">
             
             <a class="navbar-brand d-flex align-items-center" href="/index">
-                <div class="brand-icon-wrapper me-2 bg-white rounded-circle p-1 d-flex align-items-center justify-content-center" style="width: 40px; height: 40px;">
+                <div class="brand-icon-wrapper me-2 bg-white p-1 d-flex align-items-center justify-content-center" style="width: 40px; height: 40px;">
                     <img src="{{ url_for('static', filename='uploads/logo-removebg-preview.png') }}" alt="RP" style="height: 28px; width: auto;">
                 </div>
                 <div>
@@ -379,4 +379,5 @@
     </script>
 </body>
 </html>
+
 
