--- a/templates/reports.html
+++ b/templates/reports.html
@@ -410,8 +410,8 @@
                 <i class="fa-solid fa-list-check"></i>
             </div>
             <div class="card-content">
-                <h3 class="card-header-text">Detailed Sales</h3>
-                <p class="card-body-text">Item-wise list of today's sales.</p>
+                <h3 class="card-header-text">Product Track</h3>
+                <p class="card-body-text">Track Inventory Products</p>
             </div>
             <div class="card-footer">
                 <span>Check Sales</span>
@@ -438,6 +438,7 @@
 
 </div>
 {% endblock %}
+
 
 
 
